# agent-it-tools

./: Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
docs/: upstream-agent-value.json  upstream-agent-value.md  wave1-crates.md
evals/: README.md  run.sh  tasks.json
scripts/: install.sh
skills/agent-it-tools/: SKILL.md
specs/: parity.toml
specs/color/: contrast.toml  parse.toml
specs/converter/: base64-decode.toml  base64-encode.toml  case.toml  csv-to-json.toml  data.toml  datetime.toml  gzip-decode.toml  gzip-encode.toml  hex-decode.toml  hex-encode.toml  json-diff.toml  json-flatten.toml  json-format.toml  json-merge.toml  json-query.toml  json-to-csv.toml  lint.toml  number-base.toml
specs/crypto/: bcrypt-hash.toml  bcrypt-verify.toml  hash.toml  hmac.toml  otp.toml  token.toml
specs/data/: convert.toml  lint.toml
specs/datetime/: convert.toml  duration.toml  now.toml  timezone.toml
specs/decode/: base64.toml  gzip.toml  hex.toml  html.toml  punycode.toml
specs/development/: bitwise.toml  calc.toml  chmod.toml  cron.toml  diff.toml  nanoid.toml  regex.toml  string-escape.toml  ulid.toml  uuid.toml
specs/encode/: base64.toml  gzip.toml  hex.toml  html.toml  punycode.toml
specs/generate/: nanoid.toml  token.toml  ulid.toml  uuid.toml
specs/http/: basic-auth.toml  mime.toml  user-agent.toml
specs/json/: diff.toml  escape.toml  flatten.toml  format.toml  merge.toml  query.toml
specs/jwt/: decode.toml
specs/markdown/: from-html.toml  to-html.toml
specs/math/: bitwise.toml  calc.toml  number-base.toml
specs/network/: cidr-contains.toml  cidr-to-range.toml  ip-convert.toml  ip.toml  range-to-cidr.toml  subnet.toml
specs/regex/: test.toml
specs/text/: case.toml  diff.toml  distance.toml  mask.toml  slugify.toml  stats.toml
specs/time/: convert.toml  cron.toml  duration.toml  now.toml  timezone.toml
specs/unix/: chmod.toml
specs/url/: build.toml  decode.toml  encode.toml  parse.toml
specs/web/: basic-auth.toml  color.toml  contrast.toml  html-escape.toml  html-to-markdown.toml  html-unescape.toml  jwt.toml  markdown-to-html.toml  mime.toml  punycode-decode.toml  punycode-encode.toml  (+6 more)
src/: codec.rs  color.rs  converter.rs  crypto.rs  data.rs  datetime.rs  development.rs  generate.rs  http.rs  json.rs  lib.rs  main.rs  markdown.rs  math.rs  meta.rs  network.rs  regex.rs  text.rs  time.rs  unix.rs  url.rs  util.rs  web.rs
tests/: spec_golden.rs
