[package]
name = "agent-it-tools"
version = "0.1.0"
edition = "2021"
description = "Agent-first CLI port of the it-tools utility suite"
license = "MIT"

[dependencies]
# CLI parsing
clap = { version = "4.4", features = ["derive"] }
# Error management
anyhow = "1.0"
# Serialization / parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
# Encoders
base64 = "0.22"
urlencoding = "2.1"
hex = "0.4"
html-escape = "0.2"
# Crypto / hashes
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
bcrypt = "0.15"
# String utils
slug = "0.1"
uuid = { version = "1.6", features = ["v4", "v5", "v7"] }
rand = "0.8"
heck = "0.5"
# Time & logic
cron = "0.12"
chrono = "0.4"
# Web
url = "2.5"
woothee = "0.13"
# Development
regex = "1.10"
similar = "2.4"
# Self-description (embedded tool specs)
include_dir = "0.7"

[dev-dependencies]
regex = "1.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
